# MARS-VINS

./: CMakeLists.txt  LICENSE  README.md
build_android/: android.toolchain.cmake  android_cmake.sh
config/: sample_config.txt
core/include/core/: generic_driver.h  mars-vins-facade.h
example_program/: generic_driver.cpp  vins_example_app.cpp
